--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "1.0.3",
+  "version": "1.0.10",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -12,7 +12,9 @@
   ],
   "scripts": {
     "build": "babel src --out-dir lib",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src",
+    "publish": "npm run build && npm run lint && npm version patch && npm publish ."
   },
   "author": "sideroad",
   "license": "MIT",
@@ -30,7 +32,8 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
-    "promise-apiclient": "^1.1.1",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.16.3",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.0.0",
@@ -45,6 +48,12 @@
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
+    "babel-eslint": "^5.0.0-beta6",
+    "eslint": "1.10.3",
+    "eslint-config-airbnb": "0.1.0",
+    "eslint-loader": "^1.0.0",
+    "eslint-plugin-import": "^0.8.0",
+    "eslint-plugin-react": "^3.5.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-power-assert": "^1.0.0",
     "babel-register": "^6.14.0",
