--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "1.0.217",
+  "version": "1.2.16",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
     "build": "babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src",
-    "publish": "npm run build && npm run lint && npm version patch && npm publish ."
+    "pub": "npm run build && npm run lint && npm publish ."
   },
   "author": "sideroad",
   "license": "MIT",
@@ -34,17 +34,20 @@
     "babel-runtime": "^6.3.19",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.16.3",
+    "properties-reader": "0.0.15",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-helmet": "^3.1.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.4",
+    "recursive-readdir-sync": "^1.0.6",
     "redux": "^3.0.4",
     "redux-connect": "^3.0.0",
-    "redux-fetch-dispatcher": "^1.1.0",
     "redux-form": "^4.2.2",
     "redux-router": "1.0.0-beta5",
-    "scroll-behavior": "^0.3.0"
+    "scroll-behavior": "^0.3.0",
+    "serialize-javascript": "^1.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
