--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "2.1.5",
+  "version": "2.3.6",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
     "build": "babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src",
-    "pub": "npm run build && npm run lint && npm publish ."
+    "pub": "rm lib/* && npm run build && npm run lint && npm publish ."
   },
   "author": "sideroad",
   "license": "MIT",
@@ -32,6 +32,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
+    "cookie-dough": "^0.1.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.16.3",
     "properties-reader": "0.0.15",
