--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -59,6 +59,7 @@
     "babel-preset-power-assert": "^1.0.0",
     "babel-register": "^6.14.0",
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
     "eslint": "1.10.3",
     "eslint-config-airbnb": "0.1.0",
     "eslint-loader": "^1.0.0",
