--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -47,8 +47,9 @@
     "redux": "^3.0.4",
     "redux-connect": "^3.0.0",
     "redux-router": "1.0.0-beta5",
-    "scroll-behavior": "^0.3.0",
-    "serialize-javascript": "^1.3.0"
+    "scroll-behavior": "^0.9.2",
+    "serialize-javascript": "^1.3.0",
+    "qs": "^6.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
