--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "3.1.3",
+  "version": "3.1.4-rc2",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -11,10 +11,10 @@
     "lib"
   ],
   "scripts": {
-    "build": "babel src --out-dir lib",
-    "test": "NODE_ENV=test mocha --timeout 20000 --compilers js:babel-register --recursive $(find test -name '*.test.js')",
+    "build": "babel src --out-dir lib --ignore '**/__test__/*.test.js'",
+    "test": "jest",
     "lint": "eslint src",
-    "pub": "rm lib/* && npm run build && npm run lint && npm test && npm publish ."
+    "pub": "rm -Rf lib/* && npm run build && npm run lint && npm test && npm publish ."
   },
   "author": "sideroad",
   "license": "MIT",
@@ -37,6 +37,7 @@
     "lodash": "^4.16.3",
     "path-to-regexp": "^1.7.0",
     "properties-reader": "0.0.15",
+    "qs": "^6.3.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-helmet": "^3.1.0",
@@ -47,13 +48,13 @@
     "redux": "^3.0.4",
     "redux-connect": "^3.0.0",
     "redux-router": "1.0.0-beta5",
-    "scroll-behavior": "^0.9.2",
     "serialize-javascript": "^1.3.0",
-    "qs": "^6.3.0"
+    "scroll-behavior": "0.3.4"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-eslint": "^5.0.0-beta6",
+    "babel-jest": "^18.0.0",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-typecheck": "^3.6.0",
     "babel-preset-es2015": "^6.14.0",
@@ -61,15 +62,18 @@
     "babel-register": "^6.14.0",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
+    "enzyme": "^2.7.0",
     "eslint": "1.10.3",
     "eslint-config-airbnb": "0.1.0",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-import": "^0.8.0",
     "eslint-plugin-react": "^3.5.0",
     "express": "^4.14.0",
+    "jest": "^18.0.0",
     "mocha": "^3.2.0",
     "power-assert": "^1.4.1",
     "should": "^11.1.2",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "webpack": "^1.14.0"
   }
 }
