--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "3.1.4-rc2",
+  "version": "4.0.0",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -13,6 +13,7 @@
   "scripts": {
     "build": "babel src --out-dir lib --ignore '**/__test__/*.test.js'",
     "test": "jest",
+    "test-update": "jest -u",
     "lint": "eslint src",
     "pub": "rm -Rf lib/* && npm run build && npm run lint && npm test && npm publish ."
   },
