--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "4.0.4",
+  "version": "4.1.1",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
     "build": "babel src --out-dir lib --ignore '**/__test__/*.test.js'",
     "test": "jest",
     "test-update": "jest -u",
+    "test-watch": "jest --watch",
     "lint": "eslint src",
     "pub": "rm -Rf lib/* && npm run build && npm run lint && npm test && npm publish ."
   },
@@ -70,10 +71,12 @@
     "eslint-plugin-import": "^0.8.0",
     "eslint-plugin-react": "^3.5.0",
     "express": "^4.14.0",
+    "fetch-mock": "^5.8.0",
     "jest": "^18.0.0",
     "mocha": "^3.2.0",
     "power-assert": "^1.4.1",
     "should": "^11.1.2",
+    "sinon": "^1.17.6",
     "supertest": "^2.0.1",
     "webpack": "^1.14.0"
   }
