--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "4.1.9",
+  "version": "4.1.10",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -50,8 +50,9 @@
     "redux": "^3.0.4",
     "redux-connect": "^3.0.0",
     "redux-router": "1.0.0-beta5",
+    "scroll-behavior": "0.3.4",
     "serialize-javascript": "^1.3.0",
-    "scroll-behavior": "0.3.4"
+    "url-pattern": "^1.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
