--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "4.1.10",
+  "version": "4.1.11",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -50,7 +50,7 @@
     "redux": "^3.0.4",
     "redux-connect": "^3.0.0",
     "redux-router": "1.0.0-beta5",
-    "scroll-behavior": "0.3.4",
+    "scroll-behavior": "^0.4.0",
     "serialize-javascript": "^1.3.0",
     "url-pattern": "^1.0.3"
   },
