--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "4.1.12",
+  "version": "4.2.0",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "cookie-dough": "^0.1.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.16.3",
+    "object-hash": "^1.1.7",
     "path-to-regexp": "^1.7.0",
     "properties-reader": "0.0.15",
     "qs": "^6.3.0",
