--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "4.2.0",
+  "version": "5.0.0",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -8,8 +8,15 @@
   },
   "main": "lib/koiki.js",
   "files": [
-    "lib"
+    "lib",
+    "bin",
+    "config"
   ],
+  "bin": {
+    "koiki-start": "./bin/start.js",
+    "koiki-build": "./bin/build.js",
+    "koiki-dev": "./bin/dev.js"
+  },
   "scripts": {
     "build": "babel src --out-dir lib --ignore '**/__test__/*.test.js'",
     "test": "jest",
@@ -24,21 +31,36 @@
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.1",
     "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-system-import-transformer": "^2.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-display-name": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-plugin-typecheck": "^3.6.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.3.13",
+    "babel-register": "^6.14.0",
     "babel-runtime": "^6.3.19",
+    "buble-loader": "^0.4.1",
+    "clean-webpack-plugin": "^0.1.4",
     "cookie-dough": "^0.1.0",
+    "css-loader": "^0.28.0",
+    "eslint-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
+    "json-loader": "^0.5.4",
+    "jsx-loader": "^0.13.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "lodash": "^4.16.3",
+    "node-sass": "^4.5.2",
     "object-hash": "^1.1.7",
+    "open": "0.0.5",
     "path-to-regexp": "^1.7.0",
+    "piping": "^0.3.0",
     "properties-reader": "0.0.15",
     "qs": "^6.3.0",
     "react": "^15.3.2",
@@ -47,29 +69,34 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.4",
+    "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.1",
     "recursive-readdir-sync": "^1.0.6",
+    "redbox-react": "^1.1.1",
     "redux": "^3.0.4",
     "redux-connect": "^3.0.0",
     "redux-router": "1.0.0-beta5",
+    "sass-loader": "^6.0.3",
     "scroll-behavior": "^0.4.0",
     "serialize-javascript": "^1.3.0",
-    "url-pattern": "^1.0.3"
+    "strip-loader": "^0.1.0",
+    "style-loader": "^0.16.1",
+    "transform-loader": "^0.2.3",
+    "url-loader": "^0.5.7",
+    "url-pattern": "^1.0.3",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-isomorphic-tools": "^2.2.18"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-eslint": "^5.0.0-beta6",
     "babel-jest": "^18.0.0",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-typecheck": "^3.6.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-power-assert": "^1.0.0",
-    "babel-register": "^6.14.0",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "enzyme": "^2.7.0",
     "eslint": "1.10.3",
     "eslint-config-airbnb": "0.1.0",
-    "eslint-loader": "^1.0.0",
     "eslint-plugin-import": "^0.8.0",
     "eslint-plugin-react": "^3.5.0",
     "express": "^4.14.0",
@@ -79,7 +106,6 @@
     "power-assert": "^1.4.1",
     "should": "^11.1.2",
     "sinon": "^1.17.6",
-    "supertest": "^2.0.1",
-    "webpack": "^1.14.0"
+    "supertest": "^2.0.1"
   }
 }
