--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "5.3.9",
+  "version": "6.0.8",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -43,12 +43,15 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.14.0",
     "babel-runtime": "^6.3.19",
+    "body-parser": "^1.17.2",
     "buble-loader": "^0.4.1",
     "clean-webpack-plugin": "^0.1.4",
     "cookie-dough": "^0.1.0",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.0",
     "eslint-loader": "^1.0.0",
     "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
@@ -60,6 +63,9 @@
     "node-sass": "^4.5.2",
     "object-hash": "^1.1.7",
     "open": "0.0.5",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-github2": "^0.1.10",
     "path-to-regexp": "^1.7.0",
     "piping": "^0.3.0",
     "prop-types": "^15.5.10",
