--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "jest": true
   },
   "rules": {
+    "id-length": 0,
     "react/no-multi-comp": 0,
     "import/default": 0,
     "import/no-duplicates": 0,
