--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koiki",
-  "version": "6.0.29",
+  "version": "6.1.1",
   "description": "Koiki",
   "repository": {
     "type": "git",
@@ -57,6 +57,7 @@
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
+    "klaw-sync": "^3.0.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "lodash": "^4.16.3",
